# car_estimate

./: .envrc  .gitignore  .pre-commit-config.yaml  cars event model.drawio  env.sample  pyproject.toml
src/cars/: __init__.py  templating.py
src/cars/add_car/: view.py
src/cars/add_car/templates/: add_car.html
src/cars/add_estimate/: processor.py
src/cars/add_history/: processor.py  view_model.py
src/cars/common/: db.py  examples.py
src/cars/domain/: application.py  car.py  system.py
src/cars/entrypoints/: web.py
src/cars/entrypoints/templates/: _base.html
src/cars/view_car/: view.py
src/cars/view_car/templates/: view_car.html
