[project]
name = "cars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris May", email = "chris@may.org" }
]
requires-python = ">=3.12"
dependencies = [
    "eventsourcing>=9.3.5",
    "fastapi>=0.115.6",
]

[project.scripts]
cars = "cars:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
# 1. Enable flake8-bugbear ('B') rules, in addition to the defaults.
#select = ["E4", "E7", "E9", "F", "B", 'C90', 'I', 'N', 'D', 'UP', 'S', 'FBT', 'A', 'COM','C4', 'DTZ', 'DJ', 'ISC', 'ICN', 'LOG', 'G', 'INP', 'PIE', 'PYI', 'PT']
select = ['ALL']

# 2. Avoid enforcing line-length violations ('E501')
ignore = ["D211", 'D212',  'COM812', 'ISC001', 'Q003','Q000', 'Q', 'D', 'C408', 'ANN', 'FA', 'PERF203']

# 3. Avoid trying to fix flake8-bugbear ('B') violations.
unfixable = ["B"]


# 4. Ignore 'E402' (import violations) in all '__init__.py' files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402", 'E501', 'S101']

[tool.ruff.format]
quote-style = "single"
